Fix broken layout in /documentation
Also rearrange box colors to compensate for layout changes

--- a/source/style.css
+++ b/source/style.css
@@ -248,14 +248,14 @@ dl#botlist dd {
 }
 
 #examples {
-    background: #f5ef7b;
-    border-color: #f2c100;
+    background: #c0e472;
+    border-color: #8bc313;
     height: auto;
 }
 
 #misc {
-    background: #c0e472;
-    border-color: #8bc313;
+    background: #e47286;
+    border-color: #e43b59;
     height: auto;
 }
 
